Control additional scenario: FilterName not found

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,9 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# Sonarqube related files
+.sonarqube/
+
+# OpenCover result file
+opencover.xml
